; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/core/extr_block.c_mmc_blk_cqe_prep_dcmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/core/extr_block.c_mmc_blk_cqe_prep_dcmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmc_request = type { i32, i32* }
%struct.mmc_queue_req = type { %struct.mmc_blk_request }
%struct.mmc_blk_request = type { %struct.mmc_request, i32 }
%struct.request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mmc_request* (%struct.mmc_queue_req*, %struct.request*)* @mmc_blk_cqe_prep_dcmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mmc_request* @mmc_blk_cqe_prep_dcmd(%struct.mmc_queue_req* %0, %struct.request* %1) #0 {
  %3 = alloca %struct.mmc_queue_req*, align 8
  %4 = alloca %struct.request*, align 8
  %5 = alloca %struct.mmc_blk_request*, align 8
  store %struct.mmc_queue_req* %0, %struct.mmc_queue_req** %3, align 8
  store %struct.request* %1, %struct.request** %4, align 8
  %6 = load %struct.mmc_queue_req*, %struct.mmc_queue_req** %3, align 8
  %7 = getelementptr inbounds %struct.mmc_queue_req, %struct.mmc_queue_req* %6, i32 0, i32 0
  store %struct.mmc_blk_request* %7, %struct.mmc_blk_request** %5, align 8
  %8 = load %struct.mmc_blk_request*, %struct.mmc_blk_request** %5, align 8
  %9 = call i32 @memset(%struct.mmc_blk_request* %8, i32 0, i32 24)
  %10 = load %struct.mmc_blk_request*, %struct.mmc_blk_request** %5, align 8
  %11 = getelementptr inbounds %struct.mmc_blk_request, %struct.mmc_blk_request* %10, i32 0, i32 1
  %12 = load %struct.mmc_blk_request*, %struct.mmc_blk_request** %5, align 8
  %13 = getelementptr inbounds %struct.mmc_blk_request, %struct.mmc_blk_request* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.mmc_request, %struct.mmc_request* %13, i32 0, i32 1
  store i32* %11, i32** %14, align 8
  %15 = load %struct.request*, %struct.request** %4, align 8
  %16 = getelementptr inbounds %struct.request, %struct.request* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.mmc_blk_request*, %struct.mmc_blk_request** %5, align 8
  %19 = getelementptr inbounds %struct.mmc_blk_request, %struct.mmc_blk_request* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.mmc_request, %struct.mmc_request* %19, i32 0, i32 0
  store i32 %17, i32* %20, align 8
  %21 = load %struct.mmc_blk_request*, %struct.mmc_blk_request** %5, align 8
  %22 = getelementptr inbounds %struct.mmc_blk_request, %struct.mmc_blk_request* %21, i32 0, i32 0
  ret %struct.mmc_request* %22
}

declare dso_local i32 @memset(%struct.mmc_blk_request*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
